--- a/trunk/Seminario 1/src/hibernate.properties
+++ b/trunk/Seminario 1/src/hibernate.properties
@@ -1,9 +1,9 @@
 hibernate.dialect org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class net.sourceforge.jtds.jdbc.Driver
 #hibernate.connection.driver_class com.microsoft.sqlserver.jdbc.SQLServerDriver
-hibernate.connection.url jdbc:jtds:sqlserver://localhost/Cocina;instance=SQLSERVER
-hibernate.connection.username test
-hibernate.connection.password test
+hibernate.connection.url jdbc:jtds:sqlserver://54.207.38.198/Cocina
+hibernate.connection.username sa
+hibernate.connection.password seminariodb
 hibernate.connection.pool_size 2
 hibernate.connection.autocommit true
 
@@ -14,10 +14,10 @@ hibernate.connection.autocommit true
 #hibernate.format_sql true
 hibernate.show_sql true
 
-#hibernate.hbm2ddl.auto create-drop
+hibernate.hbm2ddl.auto create-drop
 #hibernate.hbm2ddl.auto create
 #hibernate.hbm2ddl.auto update
-hibernate.hbm2ddl.auto validate
+#hibernate.hbm2ddl.auto validate
 
 hibernate.max_fetch_depth 1
 hibernate.jdbc.use_streams_for_binary true
