--- a/trunk/Seminario 1/WebContent/WEB-INF/web.xml
+++ b/trunk/Seminario 1/WebContent/WEB-INF/web.xml
@@ -7,7 +7,7 @@
     <welcome-file>index.jsp</welcome-file>
     <welcome-file>default.html</welcome-file>
     <welcome-file>default.htm</welcome-file>
-    <welcome-file>Login.jsp</welcome-file>
+    <welcome-file>Home.jsp</welcome-file>
   </welcome-file-list>
   <servlet>
     <description></description>
@@ -18,5 +18,15 @@
   <servlet-mapping>
     <servlet-name>Controlador</servlet-name>
     <url-pattern>/Controlador</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>IngredienteServlet</display-name>
+    <servlet-name>IngredienteServlet</servlet-name>
+    <servlet-class>servlets.IngredienteServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>IngredienteServlet</servlet-name>
+    <url-pattern>/IngredienteServlet</url-pattern>
   </servlet-mapping>
 </web-app>
