Se expone la funcionalidad de generar Planes en el planes.jsp y en el servlet correspondiente Se modifica el menu para que contenga el tag

--- a/Seminario 1/WebContent/WEB-INF/web.xml
+++ b/Seminario 1/WebContent/WEB-INF/web.xml
@@ -29,4 +29,14 @@
     <servlet-name>IngredienteServlet</servlet-name>
     <url-pattern>/IngredienteServlet</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>planServlet</display-name>
+    <servlet-name>planServlet</servlet-name>
+    <servlet-class>servlets.PlanServlet</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>planServlet</servlet-name>
+    <url-pattern>/planServlet</url-pattern>
+  </servlet-mapping>
 </web-app>
