Final Previo Abril 2014 Mejoras: Al generar el plan tiene en cuenta la estacion de un menu (la calcula en base a los ingredientes) Correcion de ortografía en archivo .jsp Creacion de clase TesterChalo, con pruebas varias

--- a/Seminario 1/src/hibernate.properties
+++ b/Seminario 1/src/hibernate.properties
@@ -1,9 +1,9 @@
 hibernate.dialect org.hibernate.dialect.SQLServerDialect
 hibernate.connection.driver_class net.sourceforge.jtds.jdbc.Driver
 #hibernate.connection.driver_class com.microsoft.sqlserver.jdbc.SQLServerDriver
-hibernate.connection.url jdbc:jtds:sqlserver://54.207.38.198/Cocina
-hibernate.connection.username sa
-hibernate.connection.password seminariodb
+hibernate.connection.url jdbc:jtds:sqlserver://127.0.0.1/seminario1db
+hibernate.connection.username seminario1
+hibernate.connection.password seminario1
 hibernate.connection.pool_size 2
 hibernate.connection.autocommit true
 
@@ -14,8 +14,8 @@ hibernate.connection.autocommit true
 #hibernate.format_sql true
 hibernate.show_sql true
 
-hibernate.hbm2ddl.auto update
 #hibernate.hbm2ddl.auto create
+hibernate.hbm2ddl.auto create-drop
 #hibernate.hbm2ddl.auto update
 #hibernate.hbm2ddl.auto validate
 
